--- a/scss/_prototypes.scss
+++ b/scss/_prototypes.scss
@@ -129,8 +129,8 @@
 }
 
 @each $level, $value in variables.$offset-values {
-    @each $type in variables.$offset-types {
-        @each $direction in variables.$offset-directions {
+    @each $type-key, $type in variables.$offset-types {
+        @each $direction-key, $direction in variables.$offset-directions {
             %#{$type}-#{$direction}-#{$level} {
                 #{$type}-#{$direction}: $value;
             }
@@ -188,8 +188,8 @@
         height: #{$i}em;
     }
 
-    @each $type in variables.$offset-types {
-        @each $direction in variables.$offset-directions {
+    @each $type-key, $type in variables.$offset-types {
+        @each $direction-key, $direction in variables.$offset-directions {
             %#{$type}-#{$direction}-#{$i} {
                 #{$type}-#{$direction}: #{$i}em;
             }
