--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,8 +15,8 @@ $xl-offset: 2em;
 $xxl-offset: 3em;
 $xxxl-offset: 5em;
 
-$offset-types: padding, margin;
-$offset-directions: top, bottom, left, right;
+$offset-types: ("p": padding, "m": margin);
+$offset-directions: ("t": top, "b": bottom, "l": left, "r": right);
 $offset-values: ("n": $n-offset, "xs": $xs-offset, "s": $s-offset, "m": $m-offset, "l": $l-offset, "xl": $xl-offset, "xxl": $xxl-offset, "xxxl": $xxxl-offset);
 
 $fonts: "Century Gothic", Arial, sans-serif;
