--- a/scss/elements/_images.scss
+++ b/scss/elements/_images.scss
@@ -33,6 +33,32 @@
     }
 }
 
+.icon-row {
+    @include prototypes.flex-row(center, center);
+    width: 100%;
+
+    > * {
+        @extend %margin-horizontal-1;
+    }
+}
+
+.icon {
+    @include prototypes.icon(map.get(map.get(map.get(variables.$themes, "light"), "colours"), "primary"));
+    min-width: 2.5em;
+    min-height: 2.5em;
+}
+
+@each $name, $theme in variables.$themes {
+    $primary: map.get(map.get($theme, "colours"), "primary");
+    $text: map.get($theme, "text-colour");
+
+    .#{$name}.icon {
+        @include prototypes.icon($primary);
+        min-width: 2.5em;
+        min-height: 2.5em;
+    }
+}
+
 @media screen and (max-width: variables.$screen-width-s) {
     .image-carousel {
         @include prototypes.flex-row(center, center);
