--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,10 @@ body {
     margin: 0px;
 }
 
+.clickable, a {
+    @extend %clickable;
+}
+
 .container {
     width: fit-content;
     height: fit-content;
