--- a/scss_compiled/style.css
+++ b/scss_compiled/style.css
@@ -233,11 +233,25 @@ form, .form {
 }
 
 .width-1, .w-1 {
+  min-width: 10% !important;
   width: 10% !important;
+}
+.width-1-max, .w-1-max {
+  max-width: 10% !important;
+}
+.width-1-min, .w-1-min {
+  min-width: 10% !important;
 }
 
 .height-1, .h-1 {
+  min-height: 10% !important;
   height: 10% !important;
+}
+.height-1-max, .h-1-max {
+  max-height: 10% !important;
+}
+.height-1-min, .h-1-min {
+  min-height: 10% !important;
 }
 
 .size-1, .s-1 {
@@ -246,15 +260,35 @@ form, .form {
   min-height: 10% !important;
   height: 10% !important;
 }
+.size-1-max, .s-1-max {
+  max-width: 10% !important;
+  max-height: 10% !important;
+}
+.size-1-min, .s-1-min {
+  min-width: 10% !important;
+  min-height: 10% !important;
+}
 
 .width-1em, .w-1em {
   min-width: 1em !important;
   width: 1em !important;
 }
+.width-1em-max, .w-1em-max {
+  max-width: 1em !important;
+}
+.width-1em-min, .w-1em-min {
+  min-width: 1em !important;
+}
 
 .height-1em, .h-1em {
   min-height: 1em !important;
   height: 1em !important;
+}
+.height-1em-max, .h-1em-max {
+  max-height: 1em !important;
+}
+.height-1em-min, .h-1em-min {
+  min-height: 1em !important;
 }
 
 .size-1em, .s-1em {
@@ -263,13 +297,35 @@ form, .form {
   min-height: 1em !important;
   height: 1em !important;
 }
+.size-1em-max, .s-1em-max {
+  max-width: 1em !important;
+  max-height: 1em !important;
+}
+.size-1em-min, .s-1em-min {
+  min-width: 1em !important;
+  min-height: 1em !important;
+}
 
 .width-2, .w-2 {
+  min-width: 20% !important;
   width: 20% !important;
+}
+.width-2-max, .w-2-max {
+  max-width: 20% !important;
+}
+.width-2-min, .w-2-min {
+  min-width: 20% !important;
 }
 
 .height-2, .h-2 {
+  min-height: 20% !important;
   height: 20% !important;
+}
+.height-2-max, .h-2-max {
+  max-height: 20% !important;
+}
+.height-2-min, .h-2-min {
+  min-height: 20% !important;
 }
 
 .size-2, .s-2 {
@@ -278,15 +334,35 @@ form, .form {
   min-height: 20% !important;
   height: 20% !important;
 }
+.size-2-max, .s-2-max {
+  max-width: 20% !important;
+  max-height: 20% !important;
+}
+.size-2-min, .s-2-min {
+  min-width: 20% !important;
+  min-height: 20% !important;
+}
 
 .width-2em, .w-2em {
   min-width: 2em !important;
   width: 2em !important;
 }
+.width-2em-max, .w-2em-max {
+  max-width: 2em !important;
+}
+.width-2em-min, .w-2em-min {
+  min-width: 2em !important;
+}
 
 .height-2em, .h-2em {
   min-height: 2em !important;
   height: 2em !important;
+}
+.height-2em-max, .h-2em-max {
+  max-height: 2em !important;
+}
+.height-2em-min, .h-2em-min {
+  min-height: 2em !important;
 }
 
 .size-2em, .s-2em {
@@ -295,13 +371,35 @@ form, .form {
   min-height: 2em !important;
   height: 2em !important;
 }
+.size-2em-max, .s-2em-max {
+  max-width: 2em !important;
+  max-height: 2em !important;
+}
+.size-2em-min, .s-2em-min {
+  min-width: 2em !important;
+  min-height: 2em !important;
+}
 
 .width-3, .w-3 {
+  min-width: 30% !important;
   width: 30% !important;
+}
+.width-3-max, .w-3-max {
+  max-width: 30% !important;
+}
+.width-3-min, .w-3-min {
+  min-width: 30% !important;
 }
 
 .height-3, .h-3 {
+  min-height: 30% !important;
   height: 30% !important;
+}
+.height-3-max, .h-3-max {
+  max-height: 30% !important;
+}
+.height-3-min, .h-3-min {
+  min-height: 30% !important;
 }
 
 .size-3, .s-3 {
@@ -310,15 +408,35 @@ form, .form {
   min-height: 30% !important;
   height: 30% !important;
 }
+.size-3-max, .s-3-max {
+  max-width: 30% !important;
+  max-height: 30% !important;
+}
+.size-3-min, .s-3-min {
+  min-width: 30% !important;
+  min-height: 30% !important;
+}
 
 .width-3em, .w-3em {
   min-width: 3em !important;
   width: 3em !important;
 }
+.width-3em-max, .w-3em-max {
+  max-width: 3em !important;
+}
+.width-3em-min, .w-3em-min {
+  min-width: 3em !important;
+}
 
 .height-3em, .h-3em {
   min-height: 3em !important;
   height: 3em !important;
+}
+.height-3em-max, .h-3em-max {
+  max-height: 3em !important;
+}
+.height-3em-min, .h-3em-min {
+  min-height: 3em !important;
 }
 
 .size-3em, .s-3em {
@@ -327,13 +445,35 @@ form, .form {
   min-height: 3em !important;
   height: 3em !important;
 }
+.size-3em-max, .s-3em-max {
+  max-width: 3em !important;
+  max-height: 3em !important;
+}
+.size-3em-min, .s-3em-min {
+  min-width: 3em !important;
+  min-height: 3em !important;
+}
 
 .width-4, .w-4 {
+  min-width: 40% !important;
   width: 40% !important;
+}
+.width-4-max, .w-4-max {
+  max-width: 40% !important;
+}
+.width-4-min, .w-4-min {
+  min-width: 40% !important;
 }
 
 .height-4, .h-4 {
+  min-height: 40% !important;
   height: 40% !important;
+}
+.height-4-max, .h-4-max {
+  max-height: 40% !important;
+}
+.height-4-min, .h-4-min {
+  min-height: 40% !important;
 }
 
 .size-4, .s-4 {
@@ -342,15 +482,35 @@ form, .form {
   min-height: 40% !important;
   height: 40% !important;
 }
+.size-4-max, .s-4-max {
+  max-width: 40% !important;
+  max-height: 40% !important;
+}
+.size-4-min, .s-4-min {
+  min-width: 40% !important;
+  min-height: 40% !important;
+}
 
 .width-4em, .w-4em {
   min-width: 4em !important;
   width: 4em !important;
 }
+.width-4em-max, .w-4em-max {
+  max-width: 4em !important;
+}
+.width-4em-min, .w-4em-min {
+  min-width: 4em !important;
+}
 
 .height-4em, .h-4em {
   min-height: 4em !important;
   height: 4em !important;
+}
+.height-4em-max, .h-4em-max {
+  max-height: 4em !important;
+}
+.height-4em-min, .h-4em-min {
+  min-height: 4em !important;
 }
 
 .size-4em, .s-4em {
@@ -359,13 +519,35 @@ form, .form {
   min-height: 4em !important;
   height: 4em !important;
 }
+.size-4em-max, .s-4em-max {
+  max-width: 4em !important;
+  max-height: 4em !important;
+}
+.size-4em-min, .s-4em-min {
+  min-width: 4em !important;
+  min-height: 4em !important;
+}
 
 .width-5, .w-5 {
+  min-width: 50% !important;
   width: 50% !important;
+}
+.width-5-max, .w-5-max {
+  max-width: 50% !important;
+}
+.width-5-min, .w-5-min {
+  min-width: 50% !important;
 }
 
 .height-5, .h-5 {
+  min-height: 50% !important;
   height: 50% !important;
+}
+.height-5-max, .h-5-max {
+  max-height: 50% !important;
+}
+.height-5-min, .h-5-min {
+  min-height: 50% !important;
 }
 
 .size-5, .s-5 {
@@ -374,15 +556,35 @@ form, .form {
   min-height: 50% !important;
   height: 50% !important;
 }
+.size-5-max, .s-5-max {
+  max-width: 50% !important;
+  max-height: 50% !important;
+}
+.size-5-min, .s-5-min {
+  min-width: 50% !important;
+  min-height: 50% !important;
+}
 
 .width-5em, .w-5em {
   min-width: 5em !important;
   width: 5em !important;
 }
+.width-5em-max, .w-5em-max {
+  max-width: 5em !important;
+}
+.width-5em-min, .w-5em-min {
+  min-width: 5em !important;
+}
 
 .height-5em, .h-5em {
   min-height: 5em !important;
   height: 5em !important;
+}
+.height-5em-max, .h-5em-max {
+  max-height: 5em !important;
+}
+.height-5em-min, .h-5em-min {
+  min-height: 5em !important;
 }
 
 .size-5em, .s-5em {
@@ -391,13 +593,35 @@ form, .form {
   min-height: 5em !important;
   height: 5em !important;
 }
+.size-5em-max, .s-5em-max {
+  max-width: 5em !important;
+  max-height: 5em !important;
+}
+.size-5em-min, .s-5em-min {
+  min-width: 5em !important;
+  min-height: 5em !important;
+}
 
 .width-6, .w-6 {
+  min-width: 60% !important;
   width: 60% !important;
+}
+.width-6-max, .w-6-max {
+  max-width: 60% !important;
+}
+.width-6-min, .w-6-min {
+  min-width: 60% !important;
 }
 
 .height-6, .h-6 {
+  min-height: 60% !important;
   height: 60% !important;
+}
+.height-6-max, .h-6-max {
+  max-height: 60% !important;
+}
+.height-6-min, .h-6-min {
+  min-height: 60% !important;
 }
 
 .size-6, .s-6 {
@@ -406,15 +630,35 @@ form, .form {
   min-height: 60% !important;
   height: 60% !important;
 }
+.size-6-max, .s-6-max {
+  max-width: 60% !important;
+  max-height: 60% !important;
+}
+.size-6-min, .s-6-min {
+  min-width: 60% !important;
+  min-height: 60% !important;
+}
 
 .width-6em, .w-6em {
   min-width: 6em !important;
   width: 6em !important;
 }
+.width-6em-max, .w-6em-max {
+  max-width: 6em !important;
+}
+.width-6em-min, .w-6em-min {
+  min-width: 6em !important;
+}
 
 .height-6em, .h-6em {
   min-height: 6em !important;
   height: 6em !important;
+}
+.height-6em-max, .h-6em-max {
+  max-height: 6em !important;
+}
+.height-6em-min, .h-6em-min {
+  min-height: 6em !important;
 }
 
 .size-6em, .s-6em {
@@ -423,13 +667,35 @@ form, .form {
   min-height: 6em !important;
   height: 6em !important;
 }
+.size-6em-max, .s-6em-max {
+  max-width: 6em !important;
+  max-height: 6em !important;
+}
+.size-6em-min, .s-6em-min {
+  min-width: 6em !important;
+  min-height: 6em !important;
+}
 
 .width-7, .w-7 {
+  min-width: 70% !important;
   width: 70% !important;
+}
+.width-7-max, .w-7-max {
+  max-width: 70% !important;
+}
+.width-7-min, .w-7-min {
+  min-width: 70% !important;
 }
 
 .height-7, .h-7 {
+  min-height: 70% !important;
   height: 70% !important;
+}
+.height-7-max, .h-7-max {
+  max-height: 70% !important;
+}
+.height-7-min, .h-7-min {
+  min-height: 70% !important;
 }
 
 .size-7, .s-7 {
@@ -438,15 +704,35 @@ form, .form {
   min-height: 70% !important;
   height: 70% !important;
 }
+.size-7-max, .s-7-max {
+  max-width: 70% !important;
+  max-height: 70% !important;
+}
+.size-7-min, .s-7-min {
+  min-width: 70% !important;
+  min-height: 70% !important;
+}
 
 .width-7em, .w-7em {
   min-width: 7em !important;
   width: 7em !important;
 }
+.width-7em-max, .w-7em-max {
+  max-width: 7em !important;
+}
+.width-7em-min, .w-7em-min {
+  min-width: 7em !important;
+}
 
 .height-7em, .h-7em {
   min-height: 7em !important;
   height: 7em !important;
+}
+.height-7em-max, .h-7em-max {
+  max-height: 7em !important;
+}
+.height-7em-min, .h-7em-min {
+  min-height: 7em !important;
 }
 
 .size-7em, .s-7em {
@@ -455,13 +741,35 @@ form, .form {
   min-height: 7em !important;
   height: 7em !important;
 }
+.size-7em-max, .s-7em-max {
+  max-width: 7em !important;
+  max-height: 7em !important;
+}
+.size-7em-min, .s-7em-min {
+  min-width: 7em !important;
+  min-height: 7em !important;
+}
 
 .width-8, .w-8 {
+  min-width: 80% !important;
   width: 80% !important;
+}
+.width-8-max, .w-8-max {
+  max-width: 80% !important;
+}
+.width-8-min, .w-8-min {
+  min-width: 80% !important;
 }
 
 .height-8, .h-8 {
+  min-height: 80% !important;
   height: 80% !important;
+}
+.height-8-max, .h-8-max {
+  max-height: 80% !important;
+}
+.height-8-min, .h-8-min {
+  min-height: 80% !important;
 }
 
 .size-8, .s-8 {
@@ -470,15 +778,35 @@ form, .form {
   min-height: 80% !important;
   height: 80% !important;
 }
+.size-8-max, .s-8-max {
+  max-width: 80% !important;
+  max-height: 80% !important;
+}
+.size-8-min, .s-8-min {
+  min-width: 80% !important;
+  min-height: 80% !important;
+}
 
 .width-8em, .w-8em {
   min-width: 8em !important;
   width: 8em !important;
 }
+.width-8em-max, .w-8em-max {
+  max-width: 8em !important;
+}
+.width-8em-min, .w-8em-min {
+  min-width: 8em !important;
+}
 
 .height-8em, .h-8em {
   min-height: 8em !important;
   height: 8em !important;
+}
+.height-8em-max, .h-8em-max {
+  max-height: 8em !important;
+}
+.height-8em-min, .h-8em-min {
+  min-height: 8em !important;
 }
 
 .size-8em, .s-8em {
@@ -487,13 +815,35 @@ form, .form {
   min-height: 8em !important;
   height: 8em !important;
 }
+.size-8em-max, .s-8em-max {
+  max-width: 8em !important;
+  max-height: 8em !important;
+}
+.size-8em-min, .s-8em-min {
+  min-width: 8em !important;
+  min-height: 8em !important;
+}
 
 .width-9, .w-9 {
+  min-width: 90% !important;
   width: 90% !important;
+}
+.width-9-max, .w-9-max {
+  max-width: 90% !important;
+}
+.width-9-min, .w-9-min {
+  min-width: 90% !important;
 }
 
 .height-9, .h-9 {
+  min-height: 90% !important;
   height: 90% !important;
+}
+.height-9-max, .h-9-max {
+  max-height: 90% !important;
+}
+.height-9-min, .h-9-min {
+  min-height: 90% !important;
 }
 
 .size-9, .s-9 {
@@ -502,15 +852,35 @@ form, .form {
   min-height: 90% !important;
   height: 90% !important;
 }
+.size-9-max, .s-9-max {
+  max-width: 90% !important;
+  max-height: 90% !important;
+}
+.size-9-min, .s-9-min {
+  min-width: 90% !important;
+  min-height: 90% !important;
+}
 
 .width-9em, .w-9em {
   min-width: 9em !important;
   width: 9em !important;
 }
+.width-9em-max, .w-9em-max {
+  max-width: 9em !important;
+}
+.width-9em-min, .w-9em-min {
+  min-width: 9em !important;
+}
 
 .height-9em, .h-9em {
   min-height: 9em !important;
   height: 9em !important;
+}
+.height-9em-max, .h-9em-max {
+  max-height: 9em !important;
+}
+.height-9em-min, .h-9em-min {
+  min-height: 9em !important;
 }
 
 .size-9em, .s-9em {
@@ -519,13 +889,35 @@ form, .form {
   min-height: 9em !important;
   height: 9em !important;
 }
+.size-9em-max, .s-9em-max {
+  max-width: 9em !important;
+  max-height: 9em !important;
+}
+.size-9em-min, .s-9em-min {
+  min-width: 9em !important;
+  min-height: 9em !important;
+}
 
 .width-10, .w-10 {
+  min-width: 100% !important;
   width: 100% !important;
+}
+.width-10-max, .w-10-max {
+  max-width: 100% !important;
+}
+.width-10-min, .w-10-min {
+  min-width: 100% !important;
 }
 
 .height-10, .h-10 {
+  min-height: 100% !important;
   height: 100% !important;
+}
+.height-10-max, .h-10-max {
+  max-height: 100% !important;
+}
+.height-10-min, .h-10-min {
+  min-height: 100% !important;
 }
 
 .size-10, .s-10 {
@@ -534,15 +926,35 @@ form, .form {
   min-height: 100% !important;
   height: 100% !important;
 }
+.size-10-max, .s-10-max {
+  max-width: 100% !important;
+  max-height: 100% !important;
+}
+.size-10-min, .s-10-min {
+  min-width: 100% !important;
+  min-height: 100% !important;
+}
 
 .width-10em, .w-10em {
   min-width: 10em !important;
   width: 10em !important;
 }
+.width-10em-max, .w-10em-max {
+  max-width: 10em !important;
+}
+.width-10em-min, .w-10em-min {
+  min-width: 10em !important;
+}
 
 .height-10em, .h-10em {
   min-height: 10em !important;
   height: 10em !important;
+}
+.height-10em-max, .h-10em-max {
+  max-height: 10em !important;
+}
+.height-10em-min, .h-10em-min {
+  min-height: 10em !important;
 }
 
 .size-10em, .s-10em {
@@ -550,6 +962,14 @@ form, .form {
   width: 10em !important;
   min-height: 10em !important;
   height: 10em !important;
+}
+.size-10em-max, .s-10em-max {
+  max-width: 10em !important;
+  max-height: 10em !important;
+}
+.size-10em-min, .s-10em-min {
+  min-width: 10em !important;
+  min-height: 10em !important;
 }
 
 .padding-top-0, .p-t-0 {
